intel/bench_ready/Chebyshev/log.txt
bench_ready/Chebyshev/Chebyshev.cpp:9:7: error: use of undeclared identifier 'data_in'
     *data_in, *data_out;
      ^
bench_ready/Chebyshev/Chebyshev.cpp:9:17: error: use of undeclared identifier 'data_out'
     *data_in, *data_out;
                ^
2 errors generated.
HLS FPGA Parse FAILED.
